# algorithms

./: .buildinfo  .gitignore  Makefile  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/maths/: derivation.doctree  index.doctree  matrices.doctree  normal-distribution.doctree  vectors.doctree
.doctrees/maths/number-theory/: index.doctree
.doctrees/ml/: index.doctree
.doctrees/ml/supervised/: activation-functions.doctree  classification.doctree  gradient-descent.doctree  index.doctree  (+7 more)
.github/workflows/: main.yml
_images/: graphviz-b5384f1283de88c1fb4894539eb8ce205c03e412.png.map
_sources/: index.rst.txt
_sources/maths/: derivation.rst.txt  index.rst.txt  matrices.rst.txt  normal-distribution.rst.txt
_sources/ml/: index.rst.txt
algorithms/: conf.py  index.rst  uml-test.rst
algorithms/maths/: derivation.rst  helpers.py  index.rst  matrices.rst
algorithms/ml/: index.rst
extensions/: dynamic_content.py  html_output.py  sympy_output.py  sympy_plot.py
maths/: derivation.html  index.html  matrices.html  normal-distribution.html  vectors.html
maths/number-theory/: index.html
ml/: index.html
ml/supervised/: activation-functions.html  classification.html  gradient-descent.html  index.html  linear-regression.html  neural-networks.html  neuron.html  random-forest.html  regressions.html  scaling.html  term-substitution-example.html
ml/unsupervised/: anomaly-detection.html  clustering.html  index.html  recommender-systems.html  reinforcement-learning.html
(+29 files in other folders)
