[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["Anton Berezin <gurunars@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^7.2.6"
sphinxcontrib-plantuml = "^0.27"
sphinx-rtd-theme = "^2.0.0"
esbonio = "^0.16.3"
doc8 = "^1.1.1"
rstcheck = "^6.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyright = "^0.0.1"
black = "^21.6b0"

[tool.pyright]
include = ["algorithms"]
exclude = ["**/__pycache__"]
pythonVersion = "3.11"
pythonPlatform = "MacOS"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
