[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["Anton Berezin <gurunars@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
sympy = "^1.12"
graphviz = "^0.20.1"
matplotlib = "^3.8.2"
jinja2 = "^3.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pyright = "^1.1.343"
black = "^23.12.1"
sphinx = "^7.2.6"
sphinxcontrib-plantuml = "^0.27"
sphinx-rtd-theme = "^2.0.0"
esbonio = "^0.16.3"
doc8 = "^1.1.1"
rstcheck = "^6.2.0"
sphinxcontrib-video = "^0.2.0"
sphinxcontrib-rawfiles = "^0.1.1"

[tool.pyright]
include = ["algorithms"]
exclude = ["**/__pycache__"]
pythonVersion = "3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.rstcheck]
ignore_directives = ["dynamic-content"]
